# GENAI_MFG_PROJECT

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
backend/: app.py  config.py  orchestrator.py  requirements.txt  supabase_schema.sql
k8s/: configmap.yaml  deployment.yaml  service.yaml
static/: index.html
static/css/: style.css
static/js/: app.js  firebase-config.js
