[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "groq>=0.9.0",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "supabase",
    "firebase-admin>=6.4.0",
]
